# Open-voice

./: OpenVoice.bat  README.md
OpenVoice/: CMakeLists.txt  LICENSE  Makefile  QUICKSTART.txt  README.md
OpenVoice/data/: phrases.txt  profile.cfg
OpenVoice/docs/: architecture.md  report.md  userguide.md
OpenVoice/include/: export.h  phrase.h  profile.h  speech.h  ui.h
OpenVoice/src/: export.c  main.c  phrase.c  profile.c  speech.c  ui.c
OpenVoice/tests/: test_phrase.c  test_profile.c  test_speech.c
